--- a/a1/a1.tex
+++ b/a1/a1.tex
@@ -1,10 +1,14 @@
-\documentclass{article}
+\documentclass[titlepage]{article}
 
 \usepackage{amsmath}
 \usepackage{fullpage}
-% \usepackage{enumerate}
+
+\title{Assignment 1}
+\date{\today}
+\author{Jerry Jiang\\ Dinah Shi}
 
 \begin{document}
+\maketitle
 
 \noindent
 \section{Problems Set 1}
