Change Dinah's name

--- a/a1/a1.tex
+++ b/a1/a1.tex
@@ -5,7 +5,7 @@
 
 \title{Assignment 1}
 \date{\today}
-\author{Jerry Jiang\\ Dinah Shi}
+\author{Jerry Jiang\\ TianQi Shi}
 
 \begin{document}
 \maketitle
