--- a/a2/a2.tex
+++ b/a2/a2.tex
@@ -17,6 +17,6 @@ obtain the particular solution satisfying the given initial condition.
 Sketch the graph of the solution, showing the key feaures, and label any
 key values.
 
-$$y' = \frac{y}{3x+1}$$
+$$y' = \frac{y}{3x+1}, y(0) = 2$$
 
 \end{document}
