--- a/a3/a3.answers.tex
+++ b/a3/a3.answers.tex
@@ -6,7 +6,7 @@
 
 \DeclareMathOperator{\arccot}{arccot}
 
-\title{Assignment 2}
+\title{Assignment 3}
 \date{\today}
 \author{Jerry Jiang\\ TianQi Shi}
 
@@ -16,16 +16,16 @@
 \noindent
 \section{Problem Set 1}
 \subsection{Problem 1}
-a) $$y'' + 3y' - 10y = 0$$
+a) $y'' + 3y' - 10y = 0$
 \begin{align*}
     &\lambda ^2 + 3 \lambda - 10 = 0
  \\ &(\lambda + 5)(\lambda -  2) = 0
  \\ &\therefore \lambda = 2, -5
 \end{align*}
 
-So $$y = c_1 e^{2x} + c_2 e^{-5x}$$
+So $y = c_1 e^{2x} + c_2 e^{-5x}$.
 
-b) $$y'' + 2y' + 3y = 0$$
+b) $y'' + 2y' + 3y = 0$
 \begin{align*}
     &\lambda ^2 + 2 \lambda + 3 = 0
  \\ &\lambda = \frac{-2 \pm \sqrt{2^2 - 4 * 1 * 3}}{2}
@@ -34,7 +34,8 @@ b) $$y'' + 2y' + 3y = 0$$
  \\ &\lambda = -1 \pm i\sqrt{2}
 \end{align*}
 
-So $$y = e^{-x}(c_1 \sin(\sqrt{2}x) + c_1 \cos(\sqrt{2}x))$$
+So $y = e^{-x}(c_1 \sin(\sqrt{2}x) + c_1 \cos(\sqrt{2}x))$.
+
 \subsection{Problem 2}
 $$y'' - 3y' = e^x + x$$
 
@@ -46,26 +47,43 @@ First find homogeneous solution.
  \\ &\lambda = 0, 3
 \end{align*}
 
-So $$y_h = c_1e^{0x} + c_2e^{3x}$$
+So $y_h = c_1e^{0x} + c_2e^{3x}$.
 
 Second find particular solution. Guess $y_p = Ae^x + Bx + C$.
 
-$C$ is part of homogenous solution. Guess $y_p = Ae^x + Bx^2 + Cx$ instead.
+$C$ is part of homogeneous solution. Guess $y_p = Ae^x + Bx^2 + Cx$ instead.
 
-$$y_p' = Ae^x + 2Bx + C$$
-$$y_p'' = Ae^x + 2B$$
+\begin{align*}
+  &y_p' = Ae^x + 2Bx + C
+  \\ &y_p'' = Ae^x + 2B
+\end{align*}
 
-$$y'' - 3y' = e^x + x$$
-$$Ae^x + 2B - 3(Ae^x + 2Bx + C) = e^x + x$$
-$$(A- 3A)e^x - 6Bx + (2B - 3C) = e^x + x$$
-$$A - 3A = 1$$
-$$-2A = 1$$
-$$A = -\frac{1}{2}$$
-$$-6B = 1$$
-$$B = -\frac{1}{6}$$
-$$2B - 3C = 0$$
-$$-\frac{2}{6} = 3C$$
-$$C = -\frac{1}{9}$$
+\begin{align*}
+  &y'' - 3y' = e^x + x
+  \\ &Ae^x + 2B - 3(Ae^x + 2Bx + C) = e^x + x
+  \\ &(A- 3A)e^x - 6Bx + (2B - 3C) = e^x + x
+\end{align*}
+
+Find $A$.
+\begin{align*}
+  \\ &A - 3A = 1
+  \\ &-2A = 1
+  \\ &A = -\frac{1}{2}
+\end{align*}
+
+Find $B$.
+\begin{align*}
+  \\ &-6B = 1
+  \\ &B = -\frac{1}{6}
+\end{align*}
+
+Find $C$.
+\begin{align*}
+  \\ &2B - 3C = 0
+  \\ &-\frac{2}{6} = 3C
+  \\ &C = -\frac{1}{9}
+\end{align*}
+
 
 So $y_p = -\frac{1}{2}e^x -\frac{1}{6}x^2 - \frac{1}{9}x$.
 
