Minor edits to a3

--- a/a3/a3.answers.tex
+++ b/a3/a3.answers.tex
@@ -23,9 +23,9 @@ a) $y'' + 3y' - 10y = 0$
  \\ &\therefore \lambda = 2, -5
 \end{align*}
 
-So $y = c_1 e^{2x} + c_2 e^{-5x}$.
+\noindent So $y = c_1 e^{2x} + c_2 e^{-5x}$.\\
 
-b) $y'' + 2y' + 3y = 0$
+\noindent b) $y'' + 2y' + 3y = 0$
 \begin{align*}
     &\lambda ^2 + 2 \lambda + 3 = 0
  \\ &\lambda = \frac{-2 \pm \sqrt{2^2 - 4 * 1 * 3}}{2}
@@ -34,12 +34,12 @@ b) $y'' + 2y' + 3y = 0$
  \\ &\lambda = -1 \pm i\sqrt{2}
 \end{align*}
 
-So $y = e^{-x}(c_1 \sin(\sqrt{2}x) + c_1 \cos(\sqrt{2}x))$.
+\noindent So $y = e^{-x}(c_1 \sin(\sqrt{2}x) + c_2 \cos(\sqrt{2}x))$.
 
 \subsection{Problem 2}
 $$y'' - 3y' = e^x + x$$
 
-First find homogeneous solution.
+\noindent First find homogeneous solution.
 
 \begin{align*}
     &\lambda^2 - 3\lambda = 0
@@ -47,11 +47,11 @@ First find homogeneous solution.
  \\ &\lambda = 0, 3
 \end{align*}
 
-So $y_h = c_1e^{0x} + c_2e^{3x}$.
+\noindent So $y_h = c_1e^{0x} + c_2e^{3x}$.
 
-Second find particular solution. Guess $y_p = Ae^x + Bx + C$.
+\noindent Second find particular solution. Guess $y_p = Ae^x + Bx + C$.
 
-$C$ is part of homogeneous solution. Guess $y_p = Ae^x + Bx^2 + Cx$ instead.
+\noindent $C$ is part of homogeneous solution. Guess $y_p = Ae^x + Bx^2 + Cx$ instead.
 
 \begin{align*}
   &y_p' = Ae^x + 2Bx + C
@@ -64,30 +64,29 @@ $C$ is part of homogeneous solution. Guess $y_p = Ae^x + Bx^2 + Cx$ instead.
   \\ &(A- 3A)e^x - 6Bx + (2B - 3C) = e^x + x
 \end{align*}
 
-Find $A$.
+\noindent Find $A$.
 \begin{align*}
   \\ &A - 3A = 1
   \\ &-2A = 1
   \\ &A = -\frac{1}{2}
 \end{align*}
 
-Find $B$.
+\noindent Find $B$.
 \begin{align*}
   \\ &-6B = 1
   \\ &B = -\frac{1}{6}
 \end{align*}
 
-Find $C$.
+\noindent Find $C$.
 \begin{align*}
   \\ &2B - 3C = 0
   \\ &-\frac{2}{6} = 3C
   \\ &C = -\frac{1}{9}
 \end{align*}
 
+\noindent So $y_p = -\frac{1}{2}e^x -\frac{1}{6}x^2 - \frac{1}{9}x$.
 
-So $y_p = -\frac{1}{2}e^x -\frac{1}{6}x^2 - \frac{1}{9}x$.
-
-So $y = -\frac{1}{2}e^x -\frac{1}{6}x^2 - \frac{1}{9}x + c_1 + c_2e^{3x}$.
+\noindent So $y = -\frac{1}{2}e^x -\frac{1}{6}x^2 - \frac{1}{9}x + c_1 + c_2e^{3x}$.
 
 \section{Problem Set 2}
 \subsection{Problem 1}
