Add a semi-conclusion to the frequency stuff

--- a/a4/a4.tex
+++ b/a4/a4.tex
@@ -117,7 +117,7 @@ $R = 10$, $L = 0.1$, and $w = 2\pi$.
   \includegraphics[scale=0.25]{r10l01w4rl.png}
 \end{center}
 
-\noindent Beating, again, still occurs, but we can see that increasing the frequency has decreased the amplitude of the wave.
+\noindent Beating, again, still occurs, but we can see that increasing the frequency has decreased the amplitude of the wave. Overall, it seems that the amplitude of the circuit scales inversely proportional to the frequency of the forcing function.
 
 \section*{C}
 
