Add second question to a6

--- a/a6/a6.tex
+++ b/a6/a6.tex
@@ -21,6 +21,13 @@
 \end{center}
 
 \section*{Question 1}
+a) Draw a labelled sketch of the following function. $$f(t) = \sin t - \sin (t-2) H(t-2) + t^2H(t-3)$$
+b) Derive a single expression for $f(t)$ from the following graph. Evaluate the transform.
+\begin{center}
+  \includegraphics[scale=0.2]{q1graph.png}
+\end{center}
+
+\section*{Question 2}
 
 Use the Laplace transform to find the particular solution of the following functions
 $$y' + y = \sin(t - 3)u(t - 3) + tu(t - 3) - 3u(t - 3)$$
@@ -35,6 +42,4 @@ $$y' + y = \sin(t - 3)u(t - 3) + tu(t - 3) - 3u(t - 3)$$
   \end{cases}
 \]
 
-
-\section*{Question 2}
 \end{document}
