Start of second question a6

--- a/a6/a6.answers.tex
+++ b/a6/a6.answers.tex
@@ -5,7 +5,7 @@
 
 \DeclareMathOperator{\arccot}{arccot}
 
-\title{Assignment 5}
+\title{Assignment 6}
 \date{\today}
 \author{Jerry Jiang\\ TianQi Shi}
 
@@ -68,7 +68,7 @@ $$cos(4t), 0 < t < 2\pi$$
   \\&= \frac{s}{s^2 + 16}
 \end{align*}
 
-So the Laplace transform of $cos(4t)$ is $\frac{s}{s^2 + 16}$.
+\noindent So the Laplace transform of $cos(4t)$ is $\frac{s}{s^2 + 16}$.
 
 \subsection{Question 2}
 
