--- a/a6/a6.answers.tex
+++ b/a6/a6.answers.tex
@@ -63,7 +63,7 @@ $$cos(4t), 0 < t < 2\pi$$
 \noindent Substitute back into the original equation
 
 \begin{align*}
-  \\L\{cos(4t)\} &= \frac{1}{1 - e^{-s2\pi}} \int_0^{2\pi} cos(4t)e^{-st} dt
+  L\{cos(4t)\} &= \frac{1}{1 - e^{-s2\pi}} \int_0^{2\pi} cos(4t)e^{-st} dt
   \\&= \frac{1}{1 - e^{-s2\pi}} * \frac{s(1 - e^{-s2\pi})}{s^2 + 16}
   \\&= \frac{s}{s^2 + 16}
 \end{align*}
