--- a/a6/a6.solution.tex
+++ b/a6/a6.solution.tex
@@ -40,8 +40,8 @@ Take the Laplace of both sides:
   &y' + y = \sin(t - 3)u(t - 3) + tu(t - 3) - 3u(t - 3)
   \\ &y' + y = \sin(t - 3)u(t - 3) + (t - 3)u(t - 3)
   \\ &sY(s) + Y(s) = \frac{e^{-3s}}{s^2 + 1} + \frac{e^{-3s}}{s^2}
-  \\ &(s + 1)Y(s) = e^{-3s}(\frac{1}{s^2 + 1} + \frac{1}{s^2})
-  \\ &Y(s) = e^{-3s}(\frac{1}{(s^2 + 1)(s + 1)} + \frac{1}{s^2(s + 1)})
+  \\ &(s + 1)Y(s) = e^{-3s}\bigg(\frac{1}{s^2 + 1} + \frac{1}{s^2}\bigg)
+  \\ &Y(s) = e^{-3s}\bigg(\frac{1}{(s^2 + 1)(s + 1)} + \frac{1}{s^2(s + 1)}\bigg) \tag{1 mark}
 \end{align*}
 
 Use partial fraction decomposition:
@@ -49,21 +49,21 @@ Use partial fraction decomposition:
   &\frac{1}{(s^2 + 1)(s + 1)} = \frac{As}{s^2 + 1} + \frac{B}{s^2 + 1} + \frac{C}{s + 1}
   \\&1 = As^2 + As + Bs + B + Cs^2 + C
   \\& A + C = 0, A + B = 0, B + C = 1
-  \\& \therefore A = -0.5, C = 0.5, B = 0.5
+    \\& \therefore A = -0.5, C = 0.5, B = 0.5 \tag{1 mark}
 \end{align*}
 
 \begin{align*}
   &\frac{1}{s^2(s + 1)} = \frac{A}{s} + \frac{B}{s^2} + \frac{C}{s + 1}
   \\&1 = As^2 + As + Bs + B + Cs^2
   \\& A + C = 0, A + B = 0, B = 1
-  \\& \therefore A = -1, B = 1, C = 1
+    \\& \therefore A = -1, B = 1, C = 1 \tag{1 mark}
 \end{align*}
 
 Take the inverse Laplace:
 \begin{align*}
-  &Y(s) = e^{-3s}(\frac{1}{(s^2 + 1)(s + 1)} + \frac{1}{s^2(s + 1)})
-  \\ &Y(s) = e^{-3s}(-\frac{1}{2}\frac{s}{s^2 + 1} + \frac{1}{2}\frac{1}{s^2 + 1} + \frac{1}{2}\frac{1}{s + 1} -\frac{1}{s} + \frac{1}{s^2} + \frac{1}{s + 1})
-  \\ &y(t) = (-\frac{1}{2}cos(t - 3) + \frac{1}{2}sin(t - 3) + \frac{3e^{-(t-3)}}{2} - 1 + (t - 3))u(t - 3)
+  &Y(s) = e^{-3s}\bigg(\frac{1}{(s^2 + 1)(s + 1)} + \frac{1}{s^2(s + 1)}\bigg)
+  \\ &Y(s) = e^{-3s}\bigg(-\frac{1}{2}\frac{s}{s^2 + 1} + \frac{1}{2}\frac{1}{s^2 + 1} + \frac{1}{2}\frac{1}{s + 1} -\frac{1}{s} + \frac{1}{s^2} + \frac{1}{s + 1}\bigg)
+    \\ &y(t) = \bigg(-\frac{1}{2}cos(t - 3) + \frac{1}{2}sin(t - 3) + \frac{3e^{-(t-3)}}{2} - 1 + (t - 3)\bigg)u(t - 3) \tag{2 marks}
 \end{align*}
 
 \section*{Question 2}
