--- a/a6/a6.grades.tex
+++ b/a6/a6.grades.tex
@@ -26,8 +26,11 @@ Question 2: 5/5 \\
 \section*{Redacted}
 
 Question 1: 3/5 - Missing transform in 1b) \\
-Question 2: ?/5 \\
+Question 2: 5/5 \\
 
-\noindent Level of questions created: ?/3
+\noindent Level of questions created: 1/3
+
+Second question was late. Questions were also unclear.
+(e.g. how does "where $f(t)$ is $t$ on $0 < t < 4$" apply to things beyond that range)
 
 \end{document}
