--- a/a7/a7.tex
+++ b/a7/a7.tex
@@ -18,8 +18,8 @@
 \end{center}
 
 \section*{Question 1}
-a) Find the inverse of the given transform in two different ways: using partial fractions and using the convolution theorem. $$\frac{7}{(s-3)s^3}$$
+Find the inverse of the given transform in two different ways: using partial fractions and using the convolution theorem. $$F(s) = \frac{7}{(s-3)s^3}$$
 
 \section*{Question 2}
-
+Solve for $x(t)$ on $0 \leq t < \infty$, $$x''-7x'=\delta(t-11)$$
 \end{document}
