Add a7 mark distribution

--- a/a7/a7.tex
+++ b/a7/a7.tex
@@ -17,9 +17,9 @@
 {\Large\bf Assignment 6}\\
 \end{center}
 
-\section*{Question 1}
+\section*{Question 1 (7 marks)}
 Find the inverse of the given transform in two different ways: using partial fractions and using the convolution theorem. $$F(s) = \frac{7}{(s-3)s^3}$$
 
-\section*{Question 2}
+\section*{Question 2 (3 marks)}
 Solve for $x(t)$ on $0 \leq t < \infty$, $$x''-7x'=\delta(t-11)$$
 \end{document}
